--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Laptop Specialists Ordering Application</string>
-    <string name="addPrompt">Please select and customize laptops to add to cart:</string>
+    <string name="addPrompt">Please customize laptops to add to cart:</string>
 
     <string name="schoolLaptopSpecsTitle">School Laptop Specifications:</string>
     <string name="workLaptopSpecsTitle">Work Laptop Specifications:</string>
@@ -21,8 +21,9 @@
     <string name="gamingLaptop_4K">4K Display</string>
     <string name="gamingLaptop_Webcam">Webcam</string>
 
-    <string name="schoolLaptopSpecsText">Intel i3 8100H Quad Core Processor, 8GB DDR4, 256GB SSD, Windows 11 Home</string>
-    <string name="workLaptopSpecsText">Intel i5 8300H Quad Core Processor, 12GB DDR4 RAM, 512GB SSD, Windows 11 Pro</string>
-    <string name="gamingLaptopSpecsText">Intel i7 8750H Hexacore Processor, 16GB DDR4 RAM, 1TB SSD, Windows 11 Home</string>
+    <string name="schoolLaptopSpecsText">Intel i3 8100H Quad Core Processor, 256GB SSD, Windows 11 Home</string>
+    <string name="workLaptopSpecsText">Intel i5 8300H Quad Core Processor, 512GB SSD, Windows 11 Pro</string>
+    <string name="gamingLaptopSpecsText">Intel i7 8750H Hexacore Processor, 1TB SSD, Windows 11 Home</string>
 
+    <string name="reviewOrder">Please review your oder: </string>
 </resources>
